--- a/src/components/PostCard.css
+++ b/src/components/PostCard.css
@@ -18,7 +18,7 @@
 .PostCard--Image {
   margin: 0 0 2rem 0;
   width: 100%;
-  height: 15rem;
+  height: 20rem;
 }
 
 .PostCard--Title {
